<resources>
    <string name="app_name">Train Schedule</string>
    <string name="title_recent">Recent</string>
    <string name="title_search">Search</string>
    <string name="title_notifications">Notices</string>



    <string name="string_help_1">

    <br>This Application consists of four card</br>

    <br>view tabs and bottom navigation tabs.</br>

    <br>Those are called Search, Notices,</br>

    <br>History, Settings and Home.</br>

</string>


    <string name="string_help_2">

    <br>In search tab you can find trains based</br>

    <br>on starting station to ending station</br>

    <br>depending on the next available train or the daily schedule.</br>

</string>


    <string name="string_help_3">

    <br>The searches can filter according to</br>

    <br>date and time.</br>

</string>


    -<string name="string_help_4">

    <br>Once you have entered the search you</br>

    <br>will get train schedule list from</br>

    <br>which you can obtained detailed</br>

    <br>information on a selected scheduled</br>

    <br>station station to ending station,</br>

    <br>time and date.</br>

</string>

    <string name="title_activity_settings">Settings</string>

    <string name="tittle_detailsPage">Train Details</string>

    <string name="settings">Settings</string>

    <string name="rating">RATING</string>

    <string name="aboutUs">ABOUT US</string>

    <string name="feedback">FEEDBACK</string>

    <string name="update">CHECK UPDATES</string>

    <string name="trainName">Train Name</string>

    <string name="in">Starting Station</string>

    <string name="out">Depature Station</string>

    <string name="startingTime">Starting Time</string>

    <string name="endingTime">Depature Time</string>

    <string name="available">Available</string>

    <string name="Classes">Classes</string>

    <string name="time">Pick Time</string>
    <string name="date">Pick Date</string>

    <string name="start_station_prompt">Enter Start Station</string>
    <string name="end_station_prompt">Enter End Station</string>

    <string-array name="stations_array">
        <item>fort</item>
        <item>galle</item>
        <item>maradana</item>
        <item>dematagoda</item>
        <item>jaffna</item>
        <item>badulla</item>
        <item>anuradapura</item>
    </string-array>

    <string name="title_notice">Notices</string>
    <string name="notifications">Notifications</string>
    <string name="Sound">Sound</string>

</resources>
