<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="Help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="4dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.045"
            android:textSize="24sp" android:textStyle="bold"
            android:textColor="@color/Heading"/>
    <TextView
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:id="@+id/help_1" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/navigation"
            app:layout_constraintVertical_bias="0.025"
            android:text="@string/string_help_1"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textAlignment="center" android:textColor="@android:color/background_dark"/>
    <TextView
            android:layout_width="320dp"
            android:layout_height="100dp"
            android:id="@+id/help_2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/navigation"
            android:text="@string/string_help_2"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textAlignment="center" android:textColor="@android:color/background_dark"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/help_1"
            app:layout_constraintVertical_bias="0.027"/>
    <TextView
            android:layout_width="320dp"
            android:layout_height="140dp"
            android:id="@+id/help_4" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/navigation"
            android:text="@string/string_help_4"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textAlignment="center" android:textColor="@android:color/background_dark"
            app:layout_constraintHorizontal_bias="0.511" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/help_3" app:layout_constraintVertical_bias="0.098"/>
    <TextView
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:id="@+id/help_3" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/navigation"
            android:text="@string/string_help_3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:textAlignment="center" android:textColor="@android:color/background_dark"
            app:layout_constraintHorizontal_bias="0.511" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/help_2" app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>