<?xml version="1.0" encoding="UTF-8"?>

    <android.support.constraint.ConstraintLayout
        tools:context=".SettingsFragment"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/container"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">


        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/settings_rating"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="1dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/rating"
            app:layout_constraintHorizontal_bias="0.461"
            android:textAlignment="viewStart" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.117"/>

    <TextView
            android:layout_height="23dp"
            android:layout_width="72dp"
            android:id="@+id/setting_about"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginStart="1dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/aboutUs"
            app:layout_constraintHorizontal_bias="0.469"
            android:textAlignment="viewStart"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" app:layout_constraintVertical_bias="0.117"/>

    <TextView android:layout_height="30dp"
              android:layout_width="wrap_content"
              android:id="@+id/setting_feedback"
              android:textColor="@android:color/background_dark"
              android:textStyle="bold"
              android:textSize="14sp"
              android:layout_marginStart="1dp"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginEnd="8dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:text="@string/feedback"
              app:layout_constraintHorizontal_bias="0.465"
              android:textAlignment="viewStart"
              android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
              android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/setting_about"
              app:layout_constraintVertical_bias="0.096"/>

    <TextView
            android:layout_height="22dp"
            android:layout_width="wrap_content"
            android:id="@+id/setting_updates"
            android:textColor="@android:color/background_dark"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginStart="1dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/update"
            app:layout_constraintHorizontal_bias="0.476"
            android:textAlignment="viewStart"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/setting_feedback"
            app:layout_constraintVertical_bias="0.105"/>

    <RatingBar
            android:layout_height="45dp"
            android:layout_width="249dp"
            android:id="@+id/ratingBar"
            android:layout_marginStart="1dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            android:rating="1.0"
            android:stepSize="1.0"
            android:numStars="5" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.2"/>

    <!-- <Button-->


    <!-- android:text="CKECK"-->


    <!-- android:layout_width="wrap_content"-->


    <!-- android:layout_height="wrap_content"-->


    <!-- android:id="@+id/button_check" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"-->


    <!-- app:layout_constraintStart_toEndOf="@+id/ratingBar" android:layout_marginStart="8dp"-->


    <!-- android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/settings_rating"-->


    <!-- app:layout_constraintHorizontal_bias="0.2" android:background="@color/colorAccent"-->


    <!-- android:textColor="@android:color/background_light"/>-->


</android.support.constraint.ConstraintLayout>