<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailsPage"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TextView
            android:text="@string/Classes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/classes" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="80dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.097"
            android:textColor="@android:color/background_dark" android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/getAvailable"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/tittle_detailsPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/details" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="4dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.045"
            android:textSize="24sp" android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"/>
    <TextView
            android:text="@string/trainName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TrainName" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/details"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.098" app:layout_constraintVertical_bias="0.028"
            android:textColor="@android:color/background_dark" android:textStyle="bold"/>
    <TextView
            android:text="@string/in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startingStation" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="80dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            android:textColor="@android:color/background_dark" android:textStyle="bold" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/editText3" app:layout_constraintVertical_bias="0.015"/>
    <TextView
            android:text="@string/out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endingStation" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="80dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            android:textColor="@android:color/background_dark" android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/getStartingTime"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/startingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/startingTime" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="80dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.108"
            android:textColor="@android:color/background_dark" android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/getStartingStation"
            app:layout_constraintVertical_bias="0.005"/>
    <TextView
            android:text="@string/endingTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/endingTime" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="80dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            android:textColor="@android:color/background_dark" android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/getEndingStation"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/available" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="80dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.091"
            android:textColor="@android:color/background_dark" android:textStyle="bold"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/getEndingTime"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Yar Devi"
            android:ems="10"
            android:id="@+id/editText3" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/TrainName" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.336"
            app:layout_constraintVertical_bias="0.0" android:textSize="14sp"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Colombo Fort"
            android:ems="10"
            android:id="@+id/getStartingStation"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.336"
            android:textSize="14sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/startingStation" app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Jaffna"
            android:ems="10"
            android:id="@+id/getEndingStation"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.336"
            android:textSize="14sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/endingStation"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="4.00 PM"
            android:ems="10"
            android:id="@+id/getEndingTime"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.326"
            android:textSize="14sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/endingTime"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Daily"
            android:ems="10"
            android:id="@+id/getAvailable"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.326"
            android:textSize="14sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/available"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="2nd class, 3rd class"
            android:ems="10"
            android:id="@+id/getClasses"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.336"
            android:textSize="14sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/classes"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="6.00 AM"
            android:ems="10"
            android:id="@+id/getStartingTime"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.347"
            android:textSize="14sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/startingTime"
            app:layout_constraintVertical_bias="0.0"/>

</android.support.constraint.ConstraintLayout>