<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NoticeFragment"
        android:label="@string/title_notice">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="189dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:id="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/NoticeBar">

        <TextView
                android:text="@string/Sound"
                android:layout_width="65dp"
                android:layout_height="23dp"
                android:id="@+id/textView3"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="139dp" android:layout_marginStart="139dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="48dp"/>
        <TextView
                android:layout_width="113dp"
                android:layout_height="25dp"
                android:id="@+id/textView2"
                android:text="@string/notifications"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="68dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="139dp" android:layout_marginStart="139dp"
                app:layout_constraintEnd_toStartOf="@+id/switch1" android:layout_marginEnd="29dp"
                android:layout_marginRight="29dp"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch1"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="66dp" android:layout_marginEnd="89dp" android:layout_marginRight="89dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch2"
                android:layout_marginEnd="89dp" android:layout_marginRight="89dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="78dp"
                android:layout_marginStart="78dp" app:layout_constraintStart_toEndOf="@+id/textView3"
                android:layout_marginBottom="44dp" app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="25dp" app:layout_constraintTop_toBottomOf="@+id/switch1"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="453dp"
            android:layout_marginBottom="19dp" app:layout_constraintBottom_toTopOf="@+id/navigation"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" android:id="@+id/NoticeBar">

        <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="421dp"
                android:id="@+id/recyclerView"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:ignore="NotSibling"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent">

        </android.support.v7.widget.RecyclerView>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
